[package]
name = "retstat"
version = "1.0.1"
description = "HTTP Server returning the status in the URL"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
repository = "https://git.sr.ht/~genbyte/retstat"
readme = "README.md"
keywords = ["http", "status", "tools"]
categories = ["command-line-utilities"]
license = "ISC"
edition = "2018"

[dependencies]
rocket = "0.4.4"
