[package]
name = "retstat"
version = "1.1.1"
description = "HTTP Server returning the status in the URL"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
repository = "https://github.com/genuinebyte/retstat"
readme = "README.md"
keywords = ["http", "status", "tools"]
categories = ["command-line-utilities"]
license = "ISC"
edition = "2018"

[dependencies]
tiny_http = "0.7.0"
getopts = "0.2"
